# tv-app-launcher

./: .gitignore  CMakeLists.txt
dep/: CMakeLists.txt
include/ltv/: container.h  window.h
include/tal/: gtk.hpp  structs.hpp  xdg.hpp
src/: CMakeLists.txt
src/cmdline/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  main.cpp
src/ltv/: CMakeLists.txt  container.cpp  window.cpp
src/tal/: CMakeLists.txt  gtk.cpp  main.cpp  xdg.cpp
