

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/lib/")
find_package(PkgConfig REQUIRED)

# GTK3
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
if(GTK3_FOUND)
	message(NOTICE "GTK3_INCLUDE_DIRS: ${GTK3_INCLUDE_DIRS}")
	message(NOTICE "GTK3_LIBRARIES: ${GTK3_LIBRARIES}")
endif()

set(LTV_LIBS
${GTK3_LIBRARIES}
PARENT_SCOPE
)
set(LTV_INCLUDES
${GTK3_INCLUDE_DIRS}
PARENT_SCOPE
)