

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/lib/")
find_package(PkgConfig REQUIRED)

# GTK3
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
if(GTK3_FOUND)
	message(NOTICE "GTK3_INCLUDE_DIRS: ${GTK3_INCLUDE_DIRS}")
	message(NOTICE "GTK3_LIBRARIES: ${GTK3_LIBRARIES}")
endif()

#XDG-BASEDIR
pkg_check_modules(XDG REQUIRED libxdg-basedir)
if(XDG_FOUND)
	message(NOTICE "XDG_INCLUDEDIR: ${XDG_INCLUDEDIR}")
	message(NOTICE "XDG_LIBRARIES: ${XDG_LIBRARIES}")
endif()

set(LTV_LIBS
${GTK3_LIBRARIES}
${XDG_LIBRARIES}
PARENT_SCOPE
)
set(LTV_INCLUDES
${GTK3_INCLUDE_DIRS}
${XDG_INCLUDEDIR}
PARENT_SCOPE
)